update misc and security login

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,13 @@ apw_blackbull:
     resource: "@ApwBlackbullBundle/Controller/"
     type:     annotation
     prefix:   /admin
+
+login:
+    path:     /login
+    defaults: { _controller: ApwBlackbullBundle:Security:login }
+
+login_check:
+    path: /login_check
+
+logout:
+    path:   /logout
