update misc and security login

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,10 @@
 security:
     # http://symfony.com/doc/current/book/security.html#encoding-the-user-s-password
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        Apw\BlackbullBundle\Entity\User:
+                    algorithm: bcrypt
+                    cost: 12
+       # Symfony\Component\Security\Core\User\User: plaintext
 
     # http://symfony.com/doc/current/book/security.html#hierarchical-roles
     role_hierarchy:
@@ -12,11 +15,13 @@ security:
 
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory:
-            memory:
-                users:
-                    fabio:  { password: fabiopass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+          administrators:
+                      entity: { class: ApwBlackbullBundle:User }
+#        in_memory:
+#            memory:
+#                users:
+#                    fabio:  { password: fabiopass, roles: [ 'ROLE_USER' ] }
+#                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
 
     # the main part of the security, where you can set up firewalls
     # for specific sections of your app
